<resources>
    <string name="app_name">PeekabooBalloon</string>
    <string name="level_label">Level:</string>
    <string name="score_label">Score:</string>
    <string name="max_number">99</string>
    <string name="popping_pin">Popping Pin</string>
    <string name="start_game">Start Game</string>
    <string name="stop_game">Stop Game</string>
    <string name="high_score">High Score:</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="pause">Pause</string>
    <string name="continue_game">Continue</string>
    <string name="stop_game_confirmation">Stop the game and go back to menu?</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
</resources>
