<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.delight.labs.games.view.base.Presenter" />

        <import type="com.delight.labs.games.helper.utils.GameHelper" />

        <import type="android.view.View" />

    </data>

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGrey">

        <LinearLayout
            android:id="@+id/llHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@id/llPins"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLabelHighScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/high_score"
                android:textColor="@color/primaryColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvHighScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/secondaryColor"
                android:textSize="20sp"
                tools:text="99" />

        </LinearLayout>


        <!-- Container for pin icons, top right -->
        <LinearLayout
            android:id="@+id/llPins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pushpin1"
                android:layout_width="@dimen/pin_size"
                android:layout_height="@dimen/pin_size"
                android:contentDescription="@string/popping_pin"
                android:src="@drawable/pin" />

            <ImageView
                android:id="@+id/pushpin2"
                android:layout_width="@dimen/pin_size"
                android:layout_height="@dimen/pin_size"
                android:contentDescription="@string/popping_pin"
                android:src="@drawable/pin" />

            <ImageView
                android:id="@+id/pushpin3"
                android:layout_width="@dimen/pin_size"
                android:layout_height="@dimen/pin_size"
                android:contentDescription="@string/popping_pin"
                android:src="@drawable/pin" />

            <ImageView
                android:id="@+id/pushpin4"
                android:layout_width="@dimen/pin_size"
                android:layout_height="@dimen/pin_size"
                android:contentDescription="@string/popping_pin"
                android:src="@drawable/pin" />

            <ImageView
                android:id="@+id/pushpin5"
                android:layout_width="@dimen/pin_size"
                android:layout_height="@dimen/pin_size"
                android:contentDescription="@string/popping_pin"
                android:src="@drawable/pin" />

        </LinearLayout>

        <!-- Buttons and status displays -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/primaryColor">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:onClick="@{(v)->presenter.onClick(v)}"
                android:text="@string/start_game"
                android:textColor="@color/primaryTextColor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnQuit"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/go_button"
                android:onClick="@{(v)->presenter.onClick(v)}"
                android:text="@string/back_to_menu"
                android:textColor="@color/primaryTextColor"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/status_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_label"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/status_text_size"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/level_display"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:gravity="end"
                    android:text="@string/max_number"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/status_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/score_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_label"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/status_text_size"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/score_display"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:gravity="end"
                    android:text="@string/max_number"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/status_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>