<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenter"
            type="com.delight.labs.games.view.base.Presenter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="65dp"
            android:fontFamily="@font/amarante_regular"
            android:onClick="@{(v)->presenter.onClick(v)}"
            android:text="@string/easy"
            android:textSize="16sp"
            app:cornerRadius="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/materialButton"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="65dp"
            android:background="@null"
            android:fontFamily="@font/amarante_regular"
            android:onClick="@{(v)->presenter.onClick(v)}"
            android:text="@string/normal"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/materialButton3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/materialButton2"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="65dp"
            android:fontFamily="@font/amarante_regular"
            android:onClick="@{(v)->presenter.onClick(v)}"
            android:text="@string/hard"
            android:textSize="16sp"
            app:cornerRadius="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/materialButton"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <com.google.android.material.card.MaterialCardView-->
        <!--            android:id="@+id/cvPeekaboo"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:onClick="@{(v)->presenter.onClick(v)}"-->
        <!--            app:cardBackgroundColor="@color/colorPrimaryDark"-->
        <!--            app:cardCornerRadius="32dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/cvFloating"-->
        <!--            app:layout_constraintHorizontal_chainStyle="packed"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent">-->

        <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent">-->

        <!--                <TextView-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:fontFamily="@font/amarante_regular"-->
        <!--                    android:gravity="center"-->
        <!--                    android:text="Peekaboo"-->
        <!--                    android:textColor="@color/colorPrimaryLight"-->
        <!--                    android:textSize="36sp"-->
        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                    app:layout_constraintEnd_toEndOf="parent"-->
        <!--                    app:layout_constraintStart_toStartOf="parent"-->
        <!--                    app:layout_constraintTop_toTopOf="parent" />-->
        <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
        <!--        </com.google.android.material.card.MaterialCardView>-->

        <!--        <com.google.android.material.card.MaterialCardView-->
        <!--            android:id="@+id/cvFloating"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:onClick="@{(v)->presenter.onClick(v)}"-->
        <!--            app:cardBackgroundColor="@color/colorAccent"-->
        <!--            app:cardCornerRadius="32dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toEndOf="@id/cvPeekaboo"-->
        <!--            app:layout_constraintTop_toTopOf="parent">-->

        <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent">-->

        <!--                <TextView-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:fontFamily="@font/amarante_regular"-->
        <!--                    android:gravity="center"-->
        <!--                    android:text="Floating"-->
        <!--                    android:textColor="@color/colorPrimaryDark"-->
        <!--                    android:textSize="36sp"-->
        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                    app:layout_constraintEnd_toEndOf="parent"-->
        <!--                    app:layout_constraintStart_toStartOf="parent"-->
        <!--                    app:layout_constraintTop_toTopOf="parent" />-->
        <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
        <!--        </com.google.android.material.card.MaterialCardView>-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>